# kato

./: .clang-tidy  CMakeLists.txt  MainWindow.ui
.github/workflows/: ci.yml
assets/: resources.qrc
assets/installer/: styles.qss
cmake/: Dependencies.cmake  deploy-qt-windows.cmake.in
include/kato/: defer.hpp
include/kato/api/: audio_output.hpp  audio_probe.hpp  file_downloader.hpp  image_cache.hpp  user.hpp  win_dark.hpp  win_keyboard_hook.hpp
include/kato/components/: bottom_content.hpp  channel_item.hpp  clickable_label.hpp  clickable_widget.hpp  dropdown_group.hpp  form.hpp  guild_icon.hpp  header.hpp  hover_button.hpp  left_sidebar.hpp  main_content.hpp  message_item.hpp  middle_content.hpp  modal.hpp  navbar.hpp  navbar_item.hpp  now_playing_bar.hpp  play_pause_button.hpp  right_sidebar.hpp  scroll_bar.hpp  search_bar.hpp  settings.hpp  smooth_scroll_area.hpp  smooth_scroll_bar.hpp  titlebar.hpp  user.hpp  user_area.hpp  widget.hpp  win_button.hpp
include/kato/views/: main_window.hpp
include/mozart/: defer.hpp
include/mozart/api/: audio_output.hpp  audio_probe.hpp  file_downloader.hpp  image_cache.hpp  win_dark.hpp  win_keyboard_hook.hpp
include/mozart/components/: bottom_content.hpp  channel_item.hpp  clickable_label.hpp  dropdown_group.hpp  form.hpp  guild_icon.hpp  header.hpp  hover_button.hpp  left_sidebar.hpp  main_content.hpp  message_item.hpp  middle_content.hpp  modal.hpp  navbar.hpp  navbar_item.hpp  now_playing_bar.hpp  play_pause_button.hpp  scroll_bar.hpp  search_bar.hpp  settings.hpp  smooth_scroll_bar.hpp  titlebar.hpp  widget.hpp  win_button.hpp
include/mozart/views/: main_window.hpp
src/: main.cpp
src/api/: audio_output.cpp  audio_probe.cpp  file_downloader.cpp  image_cache.cpp  win_dark.cpp  win_keyboard_hook.cpp
src/components/: bottom_content.cpp  channel_item.cpp  clickable_label.cpp  clickable_widget.cpp  dropdown_group.cpp  form.cpp  guild_icon.cpp  header.cpp  hover_button.cpp  left_sidebar.cpp  main_content.cpp  message_item.cpp  middle_content.cpp  modal.cpp  navbar.cpp  navbar_item.cpp  now_playing_bar.cpp  play_pause_button.cpp  right_sidebar.cpp  scroll_bar.cpp  search_bar.cpp  smooth_scroll_area.cpp  smooth_scroll_bar.cpp  titlebar.cpp  user.cpp  user_area.cpp  widget.cpp  win_button.cpp
src/views/: main_window.cpp
